--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 								"cordova-plugin-wechat-v3": "^1.0.6",
 								"cordova-plugin-whitelist": "^1.3.3",
 								"core-js": "^2.5.4",
+								"file-saver": "^2.0.2",
+								"glob": "^7.1.6",
 								"highcharts": "^6.1.3",
 								"html-to-image": "^0.1.0",
 								"material-design-icons": "^3.0.1",
@@ -54,6 +56,7 @@
 								"@angular/cli": "~6.2.1",
 								"@angular/compiler-cli": "^6.1.0",
 								"@angular/language-service": "^6.1.0",
+								"@types/file-saver": "^2.0.1",
 								"@types/highcharts": "^5.0.29",
 								"@types/jasmine": "~2.8.8",
 								"@types/jasminewd2": "~2.0.3",
